@@ -56,6 +56,10 @@ Version 2.1.2
    - Bugfix: Checking parameters to callback functions
    - Update: Expert option dialog popup menus now created via glade
    - Bugfix: Memory leak when creating popup menu
+   - Bugfix: Added include file for FreeBSD (thanks to Tim Bishop for reporting
+        this bug)
+   - Bugfix: Check for crypto lib in autoconf.ac (thanks to Tim Bishop for
+        reporting this bug)
  * Roland Stigge
    - Bugfix: Encoding of "po/fr.po"
 
